# remplacement_irridoseur

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  MESURE_COURANT.md  README.md  ROBUSTESSE.md  SPECS.md  SPECS_FINAL_v3.md  SPECS_MISEAJOUR.md  build.sh  diagram.json  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.wokwi  sdkconfig.st1bis_82_330_sr100c  sdkconfig.st1bis_82_330_sr150c  sdkconfig.st1bis_sr150c
.claude/: check-docs.ps1  settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: release.yml  tests.yml
docs/claude/: ARCHITECTURE.md  CONTEXTE.md  ETAT_MACHINE.md  REGULATION.md
docs/dev/: API_WEBSOCKET.md  ARCHITECTURE.md  BUILD_PROD.md  CONTRIBUER.md  GETTING_STARTED.md  HARDWARE.md  PINOUT_ES30G29.html  SCHEMA_CABLAGE.md  SCHEMA_GLOBAL.html  TROUBLESHOOTING.md  coupure_batterie.md
main/: CMakeLists.txt  Kconfig.projbuild  batterie.c  batterie.h  calculs_hydraulique.c  calculs_hydraulique.h  calculs_mecanique.c  calculs_mecanique.h  config_nvs.c  config_nvs.h  gpio_config.h  gpio_handler.c  gpio_handler.h  ina3221.c  ina3221.h  json_utils.c  json_utils.h  main.c  mosfet_surveillance.c  mosfet_surveillance.h  ota.c  ota.h  regulation.c  regulation.h  securites.c  securites.h  state_machine.c  state_machine.h  telemetry.c  telemetry.h  tpl5010.c  tpl5010.h  version.h  webserver.c  webserver.h  webui.h
main/abaques/: abaques.c  abaques.h  sr100c.c  sr150c.c
main/machines/: machines.c  machines.h  st1bis_82_330.c
main/simulator/: simulator.c  simulator.h  simulator_ui.h  simulator_ui.html  simulator_ws.c  simulator_ws.h
main/test/: test_calculs_hydraulique.c  test_calculs_hydraulique.h  test_calculs_mecanique.c  test_calculs_mecanique.h  test_config_nvs.c  test_gpio.c  test_gpio.h  test_mosfet_surveillance.c  test_regulation.c  test_state_machine.c  test_state_machine.h
main/webui/: index.html  index.html.in
test/host/: CMakeLists.txt  main_test.c  test_batterie.c  test_calculs_hydraulique.c  test_calculs_mecanique.c  test_config_nvs.c  test_json_utils.c  test_mosfet_surveillance.c  test_regulation.c  test_state_machine.c  unity_setup.c  unity_suite.h
test/host/helpers/: test_helpers.c  test_helpers.h
test/host/mock/: esp_err.h  esp_idf_stubs.h  esp_log.h  esp_system.h  esp_timer.h  mock_batterie.c  mock_freertos.h  mock_gpio.c  mock_gpio.h  mock_ina3221.c  mock_ina3221.h  mock_log.c  mock_log.h  mock_mosfet_surveillance.c  mock_nvs.c  mock_nvs.h  mock_telemetry.c  mock_timer.c  mock_timer.h  nvs_flash.h
test/host/mock/driver/: gpio.h
test/host/mock/freertos/: FreeRTOS.h
test/host/scenarios/: scenario_arrivee_canon.c  scenario_batterie.c  scenario_bilan_session.c  scenario_commandes_api.c  scenario_cycle_normal.c  scenario_cycle_poumon.c  scenario_modes_degrades.c  scenario_operateur.c  scenario_parametres.c  scenario_perte_pression.c  scenario_reboot.c  scenario_remplissage_poumon.c  scenario_urgences.c
test/wokwi/: scenario_boot.yaml  scenario_cycle.yaml  scenario_pause_pression.yaml
